--- a/templates/wait.html
+++ b/templates/wait.html
@@ -8,9 +8,7 @@
       <h1 class="center">Welcome back! </h1>
       <h2 class="center">We're logging you in, please wait... </h2>
 
-      <!-- <a href="dashboard.html">Click here to redirect...</a>
-
-       -->
+      <a href="dashboard">Click here to redirect...</a> 
     </div>
 
   </div>
